# Unified Rust Workspace for workspace-qdrant-mcp
#
# Build all binaries with: cargo build --release
# Outputs:
#   - target/release/wqm (CLI)
#   - target/release/memexd (daemon)

[workspace]
resolver = "2"
members = [
    "common",
    "common-node",
    "cli",
    "daemon/core",
    "daemon/grpc",
    "daemon/memexd",
    "daemon/shared-test-utils",
]

# Release profile: optimized for size and performance
# panic = "unwind" allows catch_unwind to trap panics from buggy dependencies
# (e.g. type1-encoding-parser panicking on malformed PDF fonts).
[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true

# Release-small profile: maximum size optimization
[profile.release-small]
inherits = "release"
opt-level = "s"

# Development profile: fast compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Cross-platform compilation targets
[workspace.metadata.cross-compilation]
targets = [
    "x86_64-apple-darwin",      # macOS Intel
    "aarch64-apple-darwin",     # macOS Apple Silicon
    "x86_64-unknown-linux-gnu", # Linux x86_64
    "aarch64-unknown-linux-gnu",# Linux ARM64
    "x86_64-pc-windows-msvc",   # Windows x86_64
    "aarch64-pc-windows-msvc",  # Windows ARM64
]

# Platform-specific optimization flags
[workspace.metadata.platform-flags]
macos = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,-dead_strip"]
linux = ["-C", "target-cpu=native", "-C", "link-arg=-Wl,--gc-sections"]
windows = ["-C", "target-cpu=native"]

# Workspace-level dependencies that crates can inherit
[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.50", features = [
    "rt-multi-thread", "macros", "time", "fs", "process", "signal",
    "sync", "io-std", "io-util", "net", "parking_lot"
]}
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"

# gRPC and networking
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = { version = "0.12", features = ["prost"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"

# Utilities and data structures
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = ["log", "attributes", "std"] }

# Platform-specific file watching
notify = { version = "6.1", features = ["serde"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "string", "wrap_help", "cargo", "env"] }
clap_complete = "4.5"

# Output formatting
tabled = "0.15"
colored = "2.1"

# Platform utilities
dirs = "5.0"
which = "6.0"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto
sha2 = "0.10"

# OCR (optional)
leptess = "0.14"

# Graph database (optional — LadybugDB backend)
lbug = "0.14"

# Testing dependencies (shared across workspace)
filetime = "0.2"
tokio-test = "0.4"
proptest = "1.10"
tempfile = "3.26"
serial_test = "3.4"
test-log = { version = "0.2", features = ["trace"] }
tracing-test = "0.2"
once_cell = "1.19"
regex = "1.12"
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workspace-level lint configuration
# Suppress lints that require larger refactoring or are style-only.
# TODO: Address these incrementally in dedicated clippy cleanup tasks.
[workspace.lints.clippy]
# Architectural — require function signature refactoring
too_many_arguments = "allow"
type_complexity = "allow"
# Style — auto-fixable but cargo clippy --fix can't apply overlapping spans
should_implement_trait = "allow"
manual_map = "allow"
option_map_or_none = "allow"
map_unwrap_or = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
manual_strip = "allow"
manual_is_multiple_of = "allow"
derivable_impls = "allow"
useless_format = "allow"
needless_return = "allow"
unnecessary_to_owned = "allow"
clone_on_copy = "allow"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
new_without_default = "allow"
ptr_arg = "allow"
useless_vec = "allow"
vec_init_then_push = "allow"
match_like_matches_macro = "allow"
collapsible_match = "allow"
collapsible_str_replace = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
double_ended_iterator_last = "allow"
empty_line_after_doc_comments = "allow"
if_same_then_else = "allow"
io_other_error = "allow"
lines_filter_map_ok = "allow"
manual_c_str_literals = "allow"
manual_div_ceil = "allow"
manual_find = "allow"
manual_pattern_char_comparison = "allow"
manual_unwrap_or_default = "allow"
match_ref_pats = "allow"
never_loop = "allow"
only_used_in_recursion = "allow"
redundant_slicing = "allow"
unnecessary_map_or = "allow"
useless_asref = "allow"
format_in_format_args = "allow"
module_inception = "allow"
result_large_err = "allow"
single_match = "allow"
await_holding_lock = "allow"
bool_assert_comparison = "allow"
cloned_ref_to_slice_refs = "allow"
let_underscore_future = "allow"
manual_clamp = "allow"
let_and_return = "allow"
duplicated_attributes = "allow"
assertions_on_constants = "allow"
const_is_empty = "allow"
expect_fun_call = "allow"
needless_borrows_for_generic_args = "allow"
needless_update = "allow"
unnecessary_cast = "allow"
approx_constant = "allow"
comparison_to_empty = "allow"
single_component_path_imports = "allow"
neg_cmp_op_on_partial_ord = "allow"
no_effect = "allow"
bool_comparison = "allow"
identity_op = "allow"
unnecessary_unwrap = "allow"
cast_slice_from_raw_parts = "allow"

# Patch fastembed to expose ONNX intra-op thread count control.
# Upstream hardcodes available_parallelism() which uses ALL CPU cores per session.
# This patch adds InitOptions.num_threads: Option<usize> (None = upstream behavior).
# Remove when fastembed upstream adds thread count support.
[patch.crates-io]
fastembed = { path = "patches/fastembed" }
