[package]
name = "wqm-cli"
version = "0.1.0-beta1"
edition = "2021"
description = "High-performance CLI for workspace-qdrant-mcp"
authors = ["Chris Van Eerden"]
license = "MIT"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"
keywords = ["cli", "qdrant", "mcp", "vector-database"]

[[bin]]
name = "wqm"
path = "src/main.rs"

[dependencies]
# Shared configuration (paths, YAML defaults, env expansion)
wqm-common = { path = "../common", features = ["sqlite"] }

# Core library (for grammar management)
workspace-qdrant-core = { path = "../daemon/core" }

# CLI framework
clap = { version = "4.4", features = ["derive", "string", "wrap_help", "cargo", "env"] }
clap_complete = "4.4"

# gRPC client
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime (with fs for update command)
tokio = { version = "1.35", features = ["rt", "macros", "sync", "fs", "io-util", "time"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
tabled = "0.15"
colored = "2.1"
terminal_size = "0.4"

# Platform utilities
dirs = "5.0"
which = "6.0"

# SQLite for unified queue fallback (Task 37.11)
# Using 0.31 for libsqlite3-sys compatibility with sqlx 0.8
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID for queue item IDs
uuid = { version = "1.10", features = ["v4"] }

# Crypto for idempotency key generation
sha2 = "0.10"

# Filesystem traversal
walkdir = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging (for inject command stderr output)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# HTTP client for update command
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Version comparison
semver = "1.0"


[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

# Profiles are defined in workspace root Cargo.toml
