[package]
name = "wqm-cli"
version = "0.1.3"
edition = "2021"
description = "High-performance companion for workspace-qdrant-mcp"
authors = ["Chris Van Eerden"]
license = "Apache-2.0"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"
keywords = ["cli", "qdrant", "mcp", "vector-database"]

[[bin]]
name = "wqm"
path = "src/main.rs"

[dependencies]
# Shared configuration (paths, YAML defaults, env expansion)
wqm-common = { path = "../common", features = ["sqlite"] }

# Core library (for grammar management)
workspace-qdrant-core = { path = "../daemon/core" }

# CLI framework
clap = { version = "4.5", features = ["derive", "string", "wrap_help", "cargo", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# gRPC client
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
# Shared proto client stubs (single proto-compilation site)
wqm-proto = { path = "../proto" }
# Shared daemon gRPC client (DaemonClient — retry/timeout/typed RPC wrappers)
wqm-client = { path = "../client" }

# Async runtime (with fs for update command)
tokio = { version = "1.50", features = ["rt", "macros", "sync", "fs", "io-util", "time"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Output formatting
tabled = { version = "0.15", features = ["ansi"] }
colored = "2.1"
terminal_size = "0.4"
ansi-str = "0.8"
unicode-width = "0.2"

# Platform utilities
dirs = "5.0"
which = "6.0"

# SQLite for unified queue fallback (Task 37.11)
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID for queue item IDs
uuid = { version = "1.21", features = ["v4", "v5"] }

# Crypto for idempotency key generation
sha2 = "0.10"

# Filesystem traversal
walkdir = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging (for inject command stderr output)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# HTTP client for update command
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Version comparison
semver = "1.0"

# TUI framework
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Unix signal probes (used by service::detect to verify daemon PID liveness via kill(pid, 0))
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows SCM client for `wqm service {install,uninstall,start,stop,...}`.
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3.26"
serial_test = "3.4"

# Profiles are defined in workspace root Cargo.toml

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[lints]
workspace = true

# cargo-deb metadata for APT packaging.
#
# Build a Debian package locally with `cargo deb -p wqm-cli`. The release
# workflow builds the package on tag push (see Phase C1, task #19) for
# linux/amd64 and linux/arm64.
#
# The package ships:
#   - /usr/bin/wqm        — CLI binary
#   - /usr/bin/memexd     — daemon binary (built alongside the CLI)
#   - /lib/systemd/system/memexd.service — unit file
#   - /usr/share/doc/wqm-cli/{copyright,changelog.gz} — generated by cargo-deb
[package.metadata.deb]
name = "wqm-cli"
maintainer = "Chris Van Eerden <christian.c.berclaz@gmail.com>"
copyright = "2024-2026, Christian C. Berclaz"
license-file = ["../../../LICENSE", "0"]
extended-description = """
workspace-qdrant-mcp ships a project-scoped Qdrant vector database
with hybrid (semantic + keyword) search exposed via the Model
Context Protocol. This package installs the wqm CLI and the memexd
daemon, plus a systemd unit file so memexd can be enabled with
`systemctl --user enable memexd` (or system-wide as root).
"""
section = "utils"
priority = "optional"
depends = "libc6, libgcc-s1, libstdc++6"
maintainer-scripts = "debian/"
assets = [
    ["../target/release/wqm", "usr/bin/", "755"],
    ["../target/release/memexd", "usr/bin/", "755"],
    ["../../../assets/systemd/memexd.service", "lib/systemd/system/", "644"],
    ["../../../README.md", "usr/share/doc/wqm-cli/README", "644"],
]
