[package]
name = "wqm-client"
version = "0.1.0"
edition = "2021"
description = "Shared daemon gRPC + Qdrant read client for the wqm CLI and MCP server (WI-d1/d2/d3, #82)"
authors = ["Chris Van Eerden"]
license = "Apache-2.0"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"

[lib]
name = "wqm_client"
path = "src/lib.rs"

[dependencies]
# gRPC client stack (workspace versions)
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# Shared proto client stubs (single proto-compilation site)
wqm-proto = { path = "../proto" }

# Shared config, paths, constants, project-id, hashing — NEVER workspace-qdrant-core
wqm-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# Read-only Qdrant client (pinned to match daemon/core + mcp-server usage)
qdrant-client = "1.17"
# API keys held as SecretString — never logged
secrecy = { workspace = true }
# Neutral result models (serde) + JSON payloads
serde = { workspace = true }
serde_json = { workspace = true }

# Graph node-id hashing (search graph context/fusion) — SHA256
sha2 = { workspace = true }

# Errors + tracing
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[lints]
workspace = true
