[package]
name = "wqm-common"
version = "0.1.3"
edition = "2021"
description = "Shared configuration and path resolution for workspace-qdrant-mcp"
authors = ["Chris Van Eerden"]
license = "Apache-2.0"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"

[dependencies]
# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
toml = "0.8"

# Platform directories
dirs = "5.0"

# Environment variable expansion
shellexpand = "3.1"

# Error handling
thiserror = "2.0"

# Crypto
sha2 = "0.10"

# Stable document/point ID generation (UUID v5)
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }

# LSP binary detection (PATH + editor-managed dirs)
which = "6.0"
walkdir = "2.4"

# JSON serialization (for payloads)
serde_json = "1.0"

# SQLite (optional, for resolve_path_to_project)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
sqlite = ["rusqlite"]

[dev-dependencies]
regex-lite = "0.1"
tempfile = "3.26"
rusqlite = { version = "0.32", features = ["bundled"] }
proptest = { workspace = true }

[lints]
workspace = true
