[package]
name = "wqm-common"
version = "0.1.3"
edition = "2021"
description = "Shared configuration and path resolution for workspace-qdrant-mcp"
authors = ["Chris Van Eerden"]
license = "Apache-2.0"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"

[dependencies]
# String similarity for handle resolver (AC-F16.6 FP-3).
strsim = { workspace = true }
# Unicode NFC normalization for handle resolver (AC-F16.6 DOM-R8-N2).
unicode-normalization = { workspace = true }
# Unicode case folding for handle resolver exact/fuzzy comparisons (AC-F16.6).
focaccia = { workspace = true }

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
toml = "0.8"

# Platform directories
dirs = "5.0"

# Environment variable expansion
shellexpand = "3.1"

# Error handling
thiserror = "2.0"

# Crypto
sha2 = "0.10"

# Stable document/point ID generation (UUID v5)
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }

# LSP binary detection (PATH + editor-managed dirs)
which = "6.0"
walkdir = "2.4"

# JSON serialization (for payloads)
serde_json = "1.0"

# Qdrant client -- needed for StorageError::Qdrant(Box<QdrantError>) variant (F0).
# wqm-common defines StorageError as the canonical type; hosting Box<QdrantError>
# here keeps the From<QdrantError> impl legal (orphan rule: StorageError is local)
# and lets all existing daemon-core ?-operator sites compile unchanged (AC-F0.2).
# This names the error type only -- no mutating methods are imported, so Guard-3
# symbol-reachability stays green for read-only consumers.
qdrant-client = "1.17"

# SQLite (optional, for resolve_path_to_project)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# OS advisory lock probe for the daemon-running guard (F20 / AC-F20.4).
# Probes <data_dir>/daemon.lock with flock(LOCK_EX|LOCK_NB) to detect a live
# daemon without linking wqm-storage-write (Guards 1/3). Same version as
# wqm-storage-write.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
sqlite = ["rusqlite"]

[dev-dependencies]
regex-lite = "0.1"
tempfile = "3.26"
rusqlite = { version = "0.32", features = ["bundled"] }
proptest = { workspace = true }

[lints]
workspace = true
