# wqm-storage-write — the WRITE side of the branch-storage two-crate split (F1).
#
# Owns ALL mutation: SQLite DDL/migrations, Qdrant upserts/deletes, and (in later
# features) git2-backed operations. Depends on `wqm-storage` (read) but the reverse
# edge is forbidden and CI-enforced (Guards 1-3, arch §9).
#
# Dependency-declaration classes (AC-F1.2/AC-F1.3) — class W = `{ workspace = true }`,
# class E (sqlx, async-trait, qdrant-client, dashmap) = explicit version strings.
[package]
name = "wqm-storage-write"
version = "0.1.3"
edition = "2021"
description = "Write-side storage engine (SQLite + Qdrant) for workspace-qdrant-mcp"
authors = ["Chris Van Eerden"]
license = "Apache-2.0"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"

[dependencies]
# The read sibling + the F0 canonical-type homes.
wqm-storage = { path = "../storage" }
wqm-common = { path = "../common" }
wqm-client = { path = "../client" }

# class E — dashmap is a NEW direct dep here. The live Cargo.lock carried only a
# transitive dashmap 5.5.3; this adds a direct dashmap 6.x (a 5->6 major add, not a
# bump). The two semver majors coexist (Cargo permits it); 6.x is bound here.
dashmap = "6"

# class W — shared via root [workspace.dependencies] (ARCH-07).
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# class E — NOT in [workspace.dependencies]; explicit versions (arch §9 Crate 2).
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
async-trait = "0.1"
qdrant-client = "1"
# class E — OS advisory flock(2) for single-writer enforcement (AC-F14.1). Not in
# [workspace.dependencies] (libc is a direct dep of daemon/core + daemon/memexd with
# explicit "0.2" strings there; the workspace does not host it). fs2 is FORBIDDEN.
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[lints]
workspace = true
