[package]
name = "workspace-qdrant-core"
version = "0.1.0-beta1"
edition = "2021"
license = "MIT"

[dependencies]
# Shared configuration (paths, YAML defaults, env expansion)
wqm-common = { path = "../../common" }

# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "2.0"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "process", "signal"] }
tracing = { version = "0.1", features = ["log", "attributes", "std"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Document processing and file watching
# Use notify v8 for compatibility with notify-debouncer-full
notify = { version = "8.2", features = ["serde"] }
notify-debouncer-full = "0.5"
walkdir = "2.4"
glob = "0.3"
encoding_rs = "0.8"
chardet = "0.2"
mime_guess = "2.0"
pdf-extract = "0.7"
html2text = "0.12"
calamine = "0.33"
csv = "1.4"

# Git integration
git2 = "0.19"

# Hashing and collections
sha2 = "0.10"
phf = { version = "0.11", features = ["macros"] }
md5 = "0.7"
lru = "0.12"

# Rate limiting and performance
governor = "0.6"
sysinfo = "0.30"

# Metrics and observability
prometheus = { version = "0.13", features = ["process"] }
axum = { version = "0.7", features = ["tokio"] }

# OpenTelemetry tracing (Task 412.19)
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
tracing-opentelemetry = "0.22"

# Additional core dependencies
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono", "json"] }
tracing-appender = "0.2"
logroller = "0.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
ahash = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
regex = "1.10"
which = "6.0"
qdrant-client = "1.16"
tokio-util = "0.7"
zip = "2.1"
epub = "2.0"
fastrand = "2.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive", "string"] }
scopeguard = "1.2"
tempfile = "3.8"
atty = "0.2"

# Environment variable expansion for config paths
shellexpand = "3.1"

# Platform directories (home dir, config dir, etc.)
dirs = "5.0"

# Embedding generation
# Uses ort-download-binaries (default) for static linking on supported platforms.
#
# INTEL MAC (x86_64-apple-darwin) BUILD REQUIREMENTS:
# The ort crate does not provide prebuilt binaries for Intel Mac.
# You MUST build ONNX Runtime from source:
#   1. git clone --recursive https://github.com/microsoft/onnxruntime
#   2. cd onnxruntime && ./build.sh --config Release --build_shared_lib --parallel
#   3. export ORT_LIB_LOCATION=/path/to/onnxruntime/build/Linux/Release
#   4. cargo build --release
#
# See: https://ort.pyke.io/setup/linking
# See: WORKSPACE_QDRANT_MCP.md section "ONNX Runtime Static Linking"
fastembed = { version = "5", features = ["hf-hub"] }

# Code parsing (semantic chunking)
tree-sitter = "0.24"
libloading = "0.9"  # Dynamic library loading for tree-sitter grammars

# Static grammar libraries (optional - enable 'static-grammars' feature for bundled fallback)
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.23", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwinbase"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading"
] }

[features]
default = ["static-grammars"]

# Static grammar support - includes bundled tree-sitter grammars as fallback
# Disable to reduce binary size (~5-10MB) when using only dynamic loading
static-grammars = [
    "tree-sitter-rust",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-json",
]

macos-fsevents = []
integration = []
processing_engine = []
queue_processor = []
comprehensive_file_tests = []
lsp_integration = []

[[bench]]
name = "cross_platform_benchmarks"
harness = false

[[bench]]
name = "queue_processor_bench"
harness = false

[[bench]]
name = "stress_benchmarks"
harness = false

[[bench]]
name = "example_benchmark"
harness = false

[[bench]]
name = "qdrant_ingestion_bench"
harness = false

[dev-dependencies]
# Shared test utilities
shared-test-utils = { path = "../shared-test-utils" }

# Testing framework
tokio-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
# Complex dependencies:
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
# wiremock = { workspace = true }
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
dirs = "5.0"
libc = "0.2"
