[package]
name = "workspace-qdrant-grpc"
version = "0.4.0"
edition = "2021"
authors = ["Christian C. Berclaz <christian.berclaz@mac.com>"]
description = "gRPC service for workspace-qdrant-mcp ingestion engine"
license = "MIT"
repository = "https://github.com/ChrisGVE/workspace-qdrant-mcp"

[dependencies]
# Core engine
workspace-qdrant-core = { path = "../core" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"

# gRPC and networking
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging  
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", features = ["log"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Embedding generation
fastembed = "5"

# Caching
lru = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Database access (for ProjectService)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"

[dev-dependencies]
# Shared test utilities
shared-test-utils = { path = "../shared-test-utils" }

# Testing framework
tokio-test = { workspace = true }
tonic-build = { workspace = true }
futures = "0.3"
tempfile = { workspace = true }
# Complex dependencies disabled:
# testcontainers = { workspace = true }
# wiremock = { workspace = true }